force-app/main/default/objects/Interview__c/fields/Client_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Client_Feedback__c</fullName>
    <description>What the client said about the candidate after this specific round</description>
    <label>Client Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>