force-app/main/default/objects/Interview__c/fields/Interviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_Name__c</fullName>
    <label>Interviewer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>