force-app/main/default/objects/Interview__c/fields/Interviewer_Title__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_Title__c</fullName>
    <label>Interviewer Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>