force-app/main/default/objects/Interview__c/fields/Round_Label__c.field-meta.xml
<CustomField>
    <fullName>Round_Label__c</fullName>
    <label>Round Label</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone Screen</fullName>
            </value>
            <value>
                <fullName>Technical Round</fullName>
            </value>
            <value>
                <fullName>Panel Interview</fullName>
            </value>
            <value>
                <fullName>Hiring Manager Round</fullName>
            </value>
            <value>
                <fullName>HR Round</fullName>
            </value>
            <value>
                <fullName>Final Round</fullName>
            </value>
            <value>
                <fullName>Assessment / Test</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>