force-app/main/default/objects/Interview__c/fields/Scheduled_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date_Time__c</fullName>
    <label>Scheduled Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>