force-app/main/default/objects/Interview__c/validationRules/Round_number_must_be_between_1_and_10.validationRule-meta.xml
<ValidationRule>
    <fullName>Round_number_must_be_between_1_and_10</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  Round_Number__c &lt; 1,
  Round_Number__c &gt; 10
)</errorConditionFormula>
    <errorDisplayField>Round_Number__c</errorDisplayField>
    <errorMessage>Round number must be between 1 and 10</errorMessage>
</ValidationRule>