force-app/main/default/objects/Interview__c/validationRules/Scheduled_date_must_be_in_the_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Scheduled_date_must_be_in_the_future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISNEW(),
   Scheduled_Date_Time__c  &lt; NOW()
)</errorConditionFormula>
    <errorDisplayField>Scheduled_Date_Time__c</errorDisplayField>
    <errorMessage>Interview scheduled date and time must be in the future</errorMessage>
</ValidationRule>